--- a/.env
+++ b/.env
@@ -34,3 +34,9 @@ APP_SECRET=83a70c93d676e6089181bfe160b8c845
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=1147a42e1349bed37eb0cf8f3b1c4260
+###< lexik/jwt-authentication-bundle ###
