--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,9 +17,35 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        register:
+            pattern: ^/api/users
+            stateless: true
+            methods: [POST]
+
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern:   /api
+            stateless: true
+            jwt: ~
+
         main:
             lazy: true
             provider: app_user_provider
+
+    # require jwt token for access and authorize access post to users for register
+    access_control:
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/users, roles: IS_AUTHENTICATED_FULLY, methods: [GET, PUT, DELETE] }
+        - { path: ^/api/stories,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/reviews,       roles: IS_AUTHENTICATED_FULLY }
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -29,7 +55,7 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
+    # access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
