--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
         "axios": "^0.18.0",
+        "jwt-decode": "^3.1.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0"
