--- a/project/.env
+++ b/project/.env
@@ -34,7 +34,7 @@ APP_SECRET=83a70c93d676e6089181bfe160b8c845
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
-
+DATABASE_URL="mysql://root@db_docker_symfony:3306/api_free?serverVersion=5.7"
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
